fix: screen height on mobile

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -4,6 +4,7 @@
   position: relative;
   overflow: hidden;
   min-height: 100vh;
+  min-height: 100dvh;
   min-width: 100%;
   --square-size: 160vmax;
 }
